gov: markdown p with max-width to prevent clipping for proposals with big tables

--- a/pages/markdown.css
+++ b/pages/markdown.css
@@ -249,6 +249,7 @@
   word-break: break-word;
   margin-top: 0;
   margin-bottom: 10px;
+  max-width: 790px;
 }
 
 .markdown-body blockquote {
